# rsonschema

./: .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  environment.yml
.github/: dependabot.yml
.github/workflows/: release.yml  validate.yml
python/: Cargo.toml  pyproject.toml  rsonschema.pyi
python/benches/: test_validate.py
python/src/: lib.rs
python/tests/: test_validate.py
rust/: Cargo.toml
rust/benches/: validate.rs
rust/src/: error.rs  lib.rs  report.rs  schema.rs
rust/src/error/: pointer.rs  type_.rs
rust/src/report/: evaluated.rs
rust/src/schema/: common.rs  inner.rs  keyword.rs  object.rs  root.rs
rust/src/schema/common/: dependencies.rs  draft.rs  format.rs  id.rs  number.rs  option.rs  ref_.rs  regex.rs  state.rs  type_.rs
rust/src/schema/keyword/: addtional_properties.rs  all_of.rs  any_of.rs  const_.rs  contains.rs  dependencies.rs  dependent_required.rs  dependent_schemas.rs  enum_.rs  exclusive_maximum.rs  exclusive_minimum.rs  format.rs  if_.rs  items.rs  max_items.rs  max_length.rs  max_properties.rs  maximum.rs  min_items.rs  min_length.rs  min_properties.rs  minimum.rs  multiple_of.rs  not.rs  one_of.rs  pattern.rs  pattern_properties.rs  prefix_items.rs  properties.rs  property_names.rs  ref_.rs  required.rs  type_.rs  unevaluated_items.rs  unevaluated_properties.rs  unique_items.rs
rust/tests/: official.rs
