[workspace]
members = [
    "python",
    "rust",
]
resolver = "2"

[workspace.package]
version = "0.1.15"
edition = "2024"
authors = [
    "<dev@hiop.io>",
    "Dario Curreri",
]
description = "A fast, simple, user-friendly JSON Schema validator for Rust"
documentation = "https://docs.rs/rsonschema"
homepage = "https://github.com/hiop-oos/rsonschema"
keywords = [
    "jsonschema",
    "parser",
    "validation",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hiop-oos/rsonschema"
categories = [
    "development-tools",
]
