[workspace]
members = [
    "python",
    "rust",
]
resolver = "2"

[workspace.package]
version = "0.1.16"
edition = "2024"
authors = [
    "<dev@hiop.io>",
    "Dario Curreri",
]
description = "A fast, simple, user-friendly JSON Schema validator for Rust"
documentation = "https://docs.rs/rsonschema"
homepage = "https://github.com/hiop-oss/rsonschema"
keywords = [
    "json",
    "jsonschema",
    "schema",
    "validation",
    "validator",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hiop-oss/rsonschema"
categories = [
    "development-tools",
    "parser-implementations",
    "web-programming",
]
